<resources>
    <string name="vk_client_secret" translatable="false">sPT3B7GaT27R1zaB5uwN</string>
    <string name="vk_account_manager_id" translatable="false">com.teamforce.thanksapp.account</string>
    <string name="vk_external_oauth_redirect_url" translatable="false">vk51712859://vk.com</string>
    <string name="required_field">Обязательное поле</string>
    <string name="empty_search_result">По вашему запросу\nникого не нашли</string>
    <string name="main_activity_invite_to_org">Перейти в сообщество %1$s?</string>
    <string name="main_activity_create_period">Период не был создан, перейти к созданию периода?</string>
    <string name="agree_with">Согласен с</string>
    <string name="privacy_policy_greeting">Политикой конфиденциальности</string>
    <string name="user_agreement_greeting">Пользовательского соглашения</string>
    <string name="and_conditions">и условиями</string>
    <string name="app_name">TeamForce360</string>
    <string name="go_to_telegram">Go to Telegram</string>
    <string name="input_login_message">Для входа введите имя пользователя</string>
    <string name="telegram">Telegram</string>
    <string name="enter">Войти</string>
    <string name="go_to_telegram_message">Или войдите через телеграм-бот</string>
    <string name="input_code">Введите код подтверждения</string>
    <string name="code">Код подтверждения</string>
    <string name="check">Проверить</string>
    <string name="Toast_verifyCode_hintTg">Код отправлен в телеграм</string>
    <string name="Toast_verifyCode_hintEmail">Код отправлен на указанную электронную почту</string>
    <string name="helperTextAboutTg">Перейдите в диалог с ботом %s напишите команду /start, после чего повторите процедуру аутентификации</string>
    <string name="helperTextAboutEmail">Проверьте папку "Спам" и правильность введенного адреса электронной почты %s</string>
    <string name="chooseOrg">Выбрать сообщество</string>
    <string name="helperTextStandard">Не пришел код?</string>
    <string name="helperLink"><u>Повторить процедуру аутентификации</u></string>
    <string name="auth_label">Введите логин</string>
    <string name="get_code_button_label">Получить код</string>
    <string name="confirmation_code_label">Введите код подтверждения</string>
    <string name="incorrect_code">Неверный код</string>
    <string name="auth">Авторизация</string>
    <string name="login_title">Спасибка</string>
    <string name="login_prompt_for_login_field">Введите адрес электронной почты, имя пользователя Telegram или Telegram ID</string>
    <string name="continue_without_change_org">Назад</string>
    <string name="changeOrg">Смена сообщества</string>
    <string name="onboarding_create_community">Создать сообщество</string>
    <string name="onboarding_invite_members">Пригласить участников</string>
    <string name="onboarding_join">Присоединиться</string>
    <string name="onboarding_step_1_title">Сообщества</string>
    <string name="onboarding_step_1_subtitle">Создавайте сообщество, приглашайте друзей и присоединяйтесь к другим!</string>
    <string name="onboarding_step_ordering_1">Шаг 1/2</string>
    <string name="onboarding_step_ordering_2">Шаг 2/2</string>
    <string name="onboarding_step_2_title">Настройки периода</string>
    <string name="onboarding_step_2_subtitle">Начните работу со стандартными настройками или заполните вручную</string>
    <string name="onboarding_launch_the_period">Запустить период</string>
    <string name="onboarding_date_start_period">Дата начала периода</string>
    <string name="onboarding_date_end_period">Дата окончания периода</string>
    <string name="onboarding_start_balance">Стартовый баланс</string>
    <string name="onboarding_start_admin_balance">Стартовый баланс создателя</string>
    <string name="onboarding_settings_auto">Настроить автоматически</string>
    <string name="onboarding_settings_manually">Настроить вручную</string>
    <string name="onboarding_congratulations">Поздравляем!</string>
    <string name="onboarding_last_screen_subtitle">Вы завершили основные настройки сообщества</string>
    <string name="onboarding_last_screen_go_to_main_screen">Перейти на главный экран</string>
    <string name="onboarding_fill_data_about_community">Заполните данные о сообществе</string>
    <string name="onboarding_join_to_community">Присоединитесь к сообществу</string>
    <string name="onboarding_join_to_community_refresh">*Возможен перезапуск приложения, при переходе в новое сообщество</string>
    <string name="onboarding_name_org">Название</string>
    <string name="onboarding_cancel">Отменить</string>
    <string name="onboarding_continue">Продолжить</string>
    <string name="onboarding_fill_date_need">Обязательные поля не заполнены</string>
    <string name="onboarding_close">Закрыть</string>
    <string name="onboarding_invitation_key">Ссылка для приглашения</string>
    <string name="onboarding_invitation_title">Пригласить участников в сообщество "%1$s?</string>
    <string name="onboarding_invitation_error">Вы не являетесь администратором текущего сообщества</string>
    <string name="onboarding_invitation_title_shimmer">Генерация ссылки-приглашения</string>
    <string name="onboarding_launched_period_successfully">Период успешно запущен</string>
    <string name="username_label">ФИО</string>
    <string name="profile_location_label">Местоположение</string>
    <string name="tg_label">Telegram ID</string>
    <string name="greeting_label">Привет, %s!</string>
    <string name="greeting_name">%s %s</string>
    <string name="legal_label">Юр.Лицо</string>
    <string name="department_label">Подразделение</string>
    <string name="position_label">Должность</string>
    <string name="hired_label">Дата начала работы</string>
    <string name="role_label">Роль</string>
    <string name="mobile_label">Мобильный номер</string>
    <string name="day_of_birth">День рождения</string>
    <string name="status">Статус</string>
    <string name="email_label">Почта</string>
    <string name="company_label">Компания</string>
    <string name="rate_label">Индекс вовлечённости</string>
    <string name="lastAuth">Последний вход %s в %s</string>
    <string name="userFio">%s %s %s</string>
    <string name="placeJob">Место работы</string>
    <string name="rateForCurrentPeriod">Индекс вовлечённости за текущий период</string>
    <string name="information">Информация</string>
    <string name="wouldYouLikeToExit">Выйти из профиля?</string>
    <string name="wouldYouLikeToChangeOrg">Сменить сообщество?</string>
    <string name="accept">Да</string>
    <string name="decline">Нет</string>
    <string name="whatEditInProfile">Что именно вы хотите отредактировать?</string>
    <string name="explainingAboutPermissions">Вы не дали нам достаточно разрешений.
        Данные разрешения нам нужны для работы с медиа.
        Вы можете разрешить их в настройках телефона.</string>
    <string name="currentOrganisation">Текущее сообщество</string>
    <string name="explainingAboutPermissionsRational">
        Вы не дали нам достаточно разрешений для работы.
        Данные разрешения нам нужны для работы с медиа.
        Запросить разрешения повторно?</string>
    <string name="wouldYouLikeToSaveImage"> Сохранить изображение?
        </string>
    <string name="avatar">Аватар</string>
    <string name="settings">Настройки</string>
    <string name="stringData">Личную информацию</string>
    <string name="exit">Выйти</string>
    <string name="close">Закрыть</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="location">Местоположение</string>
    <string name="address">Адрес</string>
    <string name="copied">Скопировано</string>
    <string name="profile_postfix_year">г.</string>
    <string name="edit_profile_fill_in_the_profile_data">Ууупс, для корректной работы системы необходимо заполнить профиль пользователя</string>
    <string name="edit_profile_go_to_settings">Перейти в настройки</string>
    <string name="edit_profile_close">Закрыть</string>
    <string name="edit_profile_hide_year_of_birth">Скрывать год рождения</string>
    <string name="edit_profile_title">Редактирование профиля</string>
    <string name="edit_profile_contacts">КОНТАКТЫ</string>
    <string name="edit_profile_save">Сохранить</string>
    <string name="edit_profile_surname">Фамилия</string>
    <string name="edit_profile_surname_enter">Введите фамилию</string>
    <string name="edit_profile_firstname">Имя</string>
    <string name="edit_profile_firstname_enter">Введите имя</string>
    <string name="edit_profile_middle_name">Отчество</string>
    <string name="edit_profile_middle_name_enter">Введите отчество</string>
    <string name="edit_profile_birthday">День рождения</string>
    <string name="edit_profile_gender">Пол</string>
    <string name="edit_profile_invalidNumber">Некорректный номер</string>
    <string name="edit_profile_invalidEmail">Некорректная почта</string>
    <string name="edit_profile_downloadingANewAvatar">Загрузка нового аватара</string>
    <string name="edit_profile_fieldsMustBeFilledInCorrectly">Поля должны быть корректно заполнены</string>
    <string name="edit_profile_office">В офисе</string>
    <string name="edit_profile_vacation">Отпуск</string>
    <string name="edit_profile_remote">Удалённо</string>
    <string name="edit_profile_sickLeave">На больничном</string>
    <string name="edit_profile_work">Работает</string>
    <string name="edit_profile_format_work">Формат работы</string>
    <string name="edit_profile_status">Статус</string>
    <string name="edit_profile_male">Мужской</string>
    <string name="edit_profile_female">Женский</string>
    <string name="aboutApp">О приложении</string>
    <string name="help">Помощь</string>
    <string name="versionOfApp">Версия приложения</string>
    <string name="versionOfOS">Версия операционной системы</string>
    <string name="modelPhone">Модель устройства</string>
    <string name="domen">Домен</string>
    <string name="region">Регион</string>
    <string name="privacyPolicy">Политика конфиденциальности</string>
    <string name="userAgreement">Пользовательское соглашение</string>
    <string name="general">Общие</string>
    <string name="language">Язык</string>
    <string name="russian">Русский</string>
    <string name="english">Английский</string>
    <string name="likeTheSystem">Как в системе</string>
    <string name="current">Текущий</string>
    <string name="settings_organizations">Сообщества</string>
    <string name="settings_create_organization">Создать сообщество</string>
    <string name="settings_go_to_organization">Перейти в сообщество \"%1$s\"?</string>
    <string name="settings_go_to">Перейти</string>
    <string name="settings_negative">Отменить</string>
    <string name="someone_profile_call_dialog_title">Позвонить</string>
    <string name="someone_profile_call_dialog_subtitle">Хотите позвонить по номеру %1$s?</string>
    <string name="someone_profile_call_dialog_positive_btn">Позвонить</string>
    <string name="applyValues">Применить</string>
    <string name="challenge_label">Челленджи</string>
    <string name="balance_label">Баланс</string>
    <string name="benefit_cafe_label">Бенефиты</string>
    <string name="main_label">Главная</string>
    <string name="filter">Фильтр</string>
    <string name="filterPrice">Цена</string>
    <string name="category">Категории</string>
    <string name="lowAllowTo">Истекает срок</string>
    <string name="reset">Сбросить</string>
    <string name="fromPrice">От</string>
    <string name="toPrice">До</string>
    <string name="statusFilter">Статус</string>
    <string name="declined">Отклонен</string>
    <string name="cancelledStatus">Отменён</string>
    <string name="allOfHistoryOrders">Все</string>
    <string name="orderedStatus">Заказан</string>
    <string name="receivedStatus">Получен</string>
    <string name="remove_category">Удалить категорию</string>
</resources>