<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.fragment.benefitCafeScreen.historyOfOrders.FiltersHistoryOfOrders">

    <com.teamforce.thanksapp.presentation.theme.ThemableTextViewContrast
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="12dp"
        android:text="@string/filter"
        android:textAppearance="@style/Headline6Medium" />

    <com.teamforce.thanksapp.presentation.theme.ThemableTextViewContrast
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/statusFilter"
        android:textAppearance="@style/Headline6Bold" />

    <RadioGroup
        android:id="@+id/status_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:orientation="vertical">

        <com.teamforce.thanksapp.presentation.theme.ThemableRadioButton
            android:id="@+id/all_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allOfHistoryOrders"
            android:textAppearance="@style/StandardText4.Black" />

        <com.teamforce.thanksapp.presentation.theme.ThemableRadioButton
            android:id="@+id/ordered_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderedStatus"
            android:textAppearance="@style/StandardText4.Black" />

        <com.teamforce.thanksapp.presentation.theme.ThemableRadioButton
            android:id="@+id/received_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receivedStatus"
            android:textAppearance="@style/StandardText4.Black" />

        <com.teamforce.thanksapp.presentation.theme.ThemableRadioButton
            android:id="@+id/declined_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/declined"
            android:textAppearance="@style/StandardText4.Black" />

        <com.teamforce.thanksapp.presentation.theme.ThemableRadioButton
            android:id="@+id/cancelled_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelledStatus"
            android:textAppearance="@style/StandardText4.Black" />



    </RadioGroup>



    <com.teamforce.thanksapp.presentation.theme.ThemableDefaultButton
        android:id="@+id/apply_btn"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:elevation="0dp"
        android:paddingVertical="17dp"
        android:text="@string/applyValues" />

    <com.teamforce.thanksapp.presentation.theme.ThemableNotFilledButton
        android:id="@+id/close_btn"
        style="@style/NotFilledButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:letterSpacing="0.06"
        android:paddingVertical="17dp"
        android:stateListAnimator="@null"
        android:text="@string/reset"
        android:textAppearance="@style/StandardText4.Black"
        android:textColor="@color/general_contrast"
        app:strokeWidth="0dp" />

</LinearLayout>