<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mainScreenFragment"
        android:enabled="true"
        android:icon="@drawable/ic_houseline"
        app:destination="@id/mainScreenFragment"
        android:title="@string/main_label"/>
    <item
        android:id="@+id/balance_graph"
        android:enabled="true"
        android:icon="@drawable/ic_creditcard"
        app:destination="@id/balance_graph"
        android:title="@string/balance_label"/>
    <item
        android:id="@+id/transaction_graph"
        android:enabled="true"
        app:destination="@id/transaction_graph"
        android:title=""/>
    <item
        android:id="@+id/challengeContainerFragment"
        android:enabled="true"
        app:destination="@id/challengesFragment"
        android:icon="@drawable/ic_medal"
        android:title="@string/challenge_label"/>

    <item
        android:id="@+id/benefitFragment"
        android:enabled="true"
        android:icon="@drawable/ic_basket"
        android:iconTint="@color/general_background"
        android:title="@string/benefit_cafe_label"/>
</menu>