<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.fragment.benefitCafeScreen.FiltersBottomSheetDialogFragment">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.teamforce.thanksapp.presentation.theme.ThemableTextViewMainBrandColor
            style="@style/StandardText4.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:visibility="invisible" />

        <com.teamforce.thanksapp.presentation.theme.ThemableTextViewContrast
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:textAppearance="@style/Headline6Medium"/>

        <com.teamforce.thanksapp.presentation.theme.ThemableTextViewMainBrandColor
            android:id="@+id/close_tv"
            style="@style/StandardText4.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textColor="@color/general_brand" />

    </LinearLayout>


    <com.teamforce.thanksapp.presentation.theme.ThemableTextViewContrast
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/Headline6Bold"/>

    <RadioGroup
        android:id="@+id/category_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:orientation="vertical">

    </RadioGroup>

    <com.teamforce.thanksapp.presentation.theme.ThemableTextViewContrast
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filterPrice"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/Headline6Bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_from_to_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditProfileTextInputLayout"
            android:layout_weight="1"
            android:layout_marginEnd="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_from_to_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fromPrice"
                android:inputType="number"
                android:lines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_up_to_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditProfileTextInputLayout"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_up_to_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/toPrice"
                android:inputType="number"
                android:lines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lowAllowTo"
            android:textAppearance="@style/StandardText4.Black" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_show_contenders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/chip_text_color_state"
            app:trackTint="@color/chip_background_color_state"
            android:checked="false"/>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="60dp"/>

    <com.teamforce.thanksapp.presentation.theme.ThemableDefaultButton
        android:id="@+id/continue_btn"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:paddingVertical="17dp"
        android:text="@string/applyValues" />

    <com.teamforce.thanksapp.presentation.theme.ThemableNotFilledButton
        android:id="@+id/close_btn"
        style="@style/NotFilledButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:paddingVertical="17dp"
        android:stateListAnimator="@null"
        android:textColor="@color/general_contrast"
        android:textAppearance="@style/StandardText4.Black"
        android:letterSpacing="0.06"
        android:text="@string/reset"
        app:strokeWidth="0dp" />

</LinearLayout>