<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_16dp"
    android:paddingTop="30dp"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".presentation.fragment.auth.onBoarding.bottomSheetDialogFragment.CreateCommunityBottomSheetDialogFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        style="@style/Headline6Medium"
        android:text="@string/onboarding_create_community"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_marginBottom="@dimen/margin_16dp"
        style="@style/StandardText4.Gray"
        android:text="@string/onboarding_fill_data_about_community"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_org_text_input"
        style="@style/EditProfileTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_org_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/onboarding_name_org"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.teamforce.thanksapp.presentation.theme.ThemableDefaultButton
        android:id="@+id/continue_btn"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:enabled="false"
        android:stateListAnimator="@null"
        android:paddingVertical="17dp"
        android:backgroundTint="@color/background_active_and_disabled_btn"
        android:elevation="20dp"
        android:text="@string/onboarding_continue"/>

    <com.teamforce.thanksapp.presentation.theme.ThemableNotFilledButton
        android:id="@+id/cancel_button"
        style="@style/NotFilledButton.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/general_background"
        android:paddingVertical="17dp"
        android:textColor="@color/general_contrast"
        android:textAllCaps="true"
        android:text="@string/onboarding_cancel"/>

</LinearLayout>