<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog_background"
    android:padding="24dp"
    android:layout_margin="16dp">


    <TextView
        android:id="@+id/title"
        style="@style/StandardText4Medium.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="17dp"
        android:gravity="end"
        android:text="@string/remove_category" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_btn"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="17dp"
        android:text="@string/yes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_btn"
        style="@style/NotFilledButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:paddingVertical="17dp"
        android:stateListAnimator="@null"
        android:text="@string/no"
        app:strokeWidth="0dp" />

</LinearLayout>